# playwrightbot

./: README.md
ctoprize/: app.py  pyproject.toml
ctoprize/deploy/: setup.sh
ctoprize/document/: CTO Prize Intro & FAQ.pptx  CTO Prize slack.docx  Payment Request Form URL & Related Request Linking Logic.md  [CTO Prize] Pain Points Pool.xlsx  [JA] CTO Prize Workshop 2 - Pain Point & Idea Surgery.pptx
ctoprize/src/: config.py  field_mapping.py  jobcan_filler.py  pdf_extractor.py
